added resume link, fixe a few ui bugs

--- a/styles/main.css
+++ b/styles/main.css
@@ -18,9 +18,9 @@ img {
 
 img.profile-pic {
     border-radius: 50%;
-    width: 150px;
-    height: 150px;
-    object-fit: cover; /* Ensures the image is cropped, not stretched */
+    width: 250px;
+    height: 250px;
+    object-fit: cover;
     transition: box-shadow 0.3s ease;
 }
 
@@ -38,7 +38,7 @@ img:hover {
     font-size: 2.5rem;
     font-weight: 600;
     margin-top: 1rem;
-    margin-bottom: 0.2rem; /* Add this line to reduce space below the name */
+    margin-bottom: 0.2rem;
     letter-spacing: 1px;
 }
 
@@ -69,7 +69,7 @@ img:hover {
     background: #f5f5f5;
     color: #111;
     transform: translateY(-2px) scale(1.03);
-    box-shadow: 0 0 20px 4px rgba(255, 255, 255, 0.5);
+    box-shadow: 0 0 10px 1px rgba(255, 255, 255, 0.5);
 }
 
 .container {
@@ -81,7 +81,7 @@ img:hover {
 .subtext {
     color: #cccccc;
     font-size: 1.2rem;
-    margin-top: 0;         /* Remove extra space above subtext */
+    margin-top: 0;
     margin-bottom: 0.1rem;
     font-family: 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif;
     font-weight: 400;
@@ -91,13 +91,12 @@ img:hover {
 
 .project-preview {
     margin-top: 1rem;
-    color: #fff;
+    color: whitesmoke;
     background: #222;
     border-radius: 8px;
     padding: 1rem 1.5rem;
     font-size: 1rem;
     min-height: 2.2rem;
-    box-shadow: 0 0 16px 2px rgba(255,255,255,0.08);
     text-align: center;
     opacity: 0;
     transition: opacity 0.3s;
@@ -133,11 +132,17 @@ img:hover {
 }
 
 .social-btn.linkedin:hover {
-    box-shadow: 0 0 16px 2px #0077B5;
+    box-shadow: 0 0 16px 1px #0077B5;
     transform: scale(1.08);
 }
 
 .social-btn.github:hover {
-    box-shadow: 0 0 16px 2px #181717;
+    box-shadow: 0 0 16px 1px #1f883d;
+    transform: scale(1.08);
+}
+
+
+.social-btn.resume:hover {
+    box-shadow: 0 0 16px 1px #A40606;
     transform: scale(1.08);
 }
